Fix SU footer horizontal overflow

--- a/app/assets/stylesheets/modules/sul-footer.scss
+++ b/app/assets/stylesheets/modules/sul-footer.scss
@@ -79,7 +79,7 @@ $sul-footer-height: 80px;
 }
 
 #global-footer {max-width: 100%;}
-#global-footer p {max-width: 100%;}
+#global-footer p {max-width: 100%; width: auto;}
 #global-footer #bottom-text {margin-right: 6px;}
 #global-footer {
   .vcard {
